web/css/styles.css
body {
	font-family: 'Open Sans', sans-serif;
	color: #555555;
}

section {
	position: relative;
	padding: 120px 0;
}

footer {
	background: #2f2f2f;
	padding: 20px 0;
	color: #FFF;
}

.bg-grey {
	background: #F5F5F5;
}

#intro {
	background: #f4f4f4 url(../images/pexels-photo-90807.jpeg);
 	background-size: cover;
	padding: 200px 0px;
}

#training {
	background: #f4f4f4 url(../images/pexels-photo-129208.jpeg) /*center center no-repeat*/ fixed;
 	background-size: cover;
}
section .dark-mask {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /*background: #000;*/
  background: #428bca;
  opacity: 0.5;
  filter: alpha(opacity=50);
}

#training .row{
	position: relative;
	z-index:2;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Montserrat', sans-serif;
	margin: 5px 0 5px;
}

h1 {
	font-size: 50px;
	font-weight: 700;
}

h2 {
	font-size: 40px;
	font-weight: 700;
}

h3 {
	font-size: 30px;
	margin-bottom: 20px;
}

h4 {
	margin-bottom: 10px;
}

.white {
	color: #f4f4f4;
}

.headline {
	margin: 0 0 40px;
}

.headline p {
	font-weight: 700;
	color: #C4C4C4;
}

.service {
	margin: 0 0 40px;
}

.icon {
	font-size: 30px;
	color: #000;
}

/*
Progress bars
*/
.progress {
	overflow: visible;
	height: 2px;
	margin-bottom: 20px;
}

.progress-title {
	margin-bottom: 15px;
}

.progress-bar {
	position: relative;
}

.progress-bar > span {
	position: absolute;
	display: block;
	top: -35px;
	right: 0;
	color: #565656;
}

/*
Navbar
*/
.navbar {
	text-transform: uppercase;
	font-family: 'Montserrat', sans-serif;
	font-weight: 200;
}

.navbar-header .navbar-brand {
	font-weight: 700;
}

.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:focus, 
.navbar-default .navbar-nav > .active > a:hover {
	border-bottom: 3px solid #428bca;
    background-color: transparent;
    color: #428bca;
}

.navbar-default .navbar-nav > li > a:focus, 
.navbar-default .navbar-nav > li > a:hover {
    border-bottom: 3px solid #b3d9ff;
}



.icon-list {
	list-style: none;
	padding: 0px;
}

.icon-list > li {
	margin-bottom: 5px;
}

.icon-list > li > i {
	margin-right: 10px;
}

/*Helper class*/
.margin {
	margin-bottom: 30px;
}

/*Affix adjustments*/
.affix {
      top: 0;
      width: 100%;
      z-index: 9999 !important;
  }

.navbar {
      margin-bottom: 0px;
  }

.affix + section {
padding-top: 174px;
  }

/*Prevent modal from being blocked by the menu bar*/
.modal {
	top: 50px;
}

/*
Portfolio
*/

/*.owl-item img {
	margin-bottom: 20px;
}*/

.portfolio-item {
	margin-bottom: 20px;
	overflow: hidden;
	max-width: 500px;
}

.portfolio-item-description {
	background: rgba(255, 255, 255, .85);
	position: absolute;
	right: 15px;
	bottom: -70px;
	left: 15px;
	padding: 25px;
	/*text-align: center;*/
	opacity: 0;
	color: #222;
	max-width: 500px;
}

.portfolio-item:hover .portfolio-item-description {
	opacity: 1;
	bottom: 0;
}

.portfolio-item-description {
	-webkit-transition: all 0.125s ease-in-out 0s;
	-moz-transition: all 0.125s ease-in-out 0s;
	-ms-transition: all 0.125s ease-in-out 0s;
	-o-transition: all 0.125s ease-in-out 0s;
	transition: all 0.125s ease-in-out 0s;
}



/*.portfolio-item-preview {
	
}*/

.portfolio-item:hover .portfolio-item-preview {
	-webkit-transform: scale(1.1) rotate(2deg);
	   -moz-transform: scale(1.3) rotate(3deg);
		-ms-transform: scale(1.3) rotate(3deg);
		 -o-transform: scale(1.3) rotate(3deg);
			transform: scale(1.2) rotate(3deg);
}

.portfolio-item-preview {
	-webkit-transition: all 0.3s ease-in-out 0s;
	-moz-transition: all 0.3s ease-in-out 0s;
	-ms-transition: all 0.3s ease-in-out 0s;
	-o-transition: all 0.3s ease-in-out 0s;
	transition: all 0.3s ease-in-out 0s;
}

